# smahs

./: .gitignore  LICENSE.txt  README.md  build.sh  db.sqlite3  debug.log.2023-05-29  debug.log.2023-06-12  debug.log.2023-06-26  debug.log.2023-07-17  debug.log.2023-07-24  debug.log.2023-08-07  debug.log.2023-08-21  debug.log.2023-09-04  debug.log.2024-05-13  debug.log.2024-05-20  debug.log.2024-05-27  package-lock.json  package.json  pyproject.toml  requirements.txt
apps/admission/: apps.py  forms.py  models.py  urls.py  views.py
apps/admission/migrations/: 0001_initial.py  0002_auto_20240622_1626.py
apps/corecode/: context_processors.py  current_user.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
apps/corecode/migrations/: 0005_rename_subject_course.py  0006_rename_academicterm_academicsemester.py  0007_rename_studentclass_studentcohort_and_more.py  0008_course_code_course_credit_unit_course_lecturer_and_more.py  0009_studentcourse_courseregistration.py  0012_alter_course_lecturer.py  (+31 more)
apps/finance/: models.py  signals.py  urls.py  views.py
apps/result/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
apps/staffs/: models.py  signals.py  views.py
apps/students/: __init__.py  models.py  signals.py  urls.py  views.py
school_app/: settings.py  urls.py
staticfiles/: staticfiles.json
staticfiles/django_select2/: django_select2.js.br
templates/: admin_dashboard.html  base.html  lecturer_dashboard.html  student_dashboard.html  temp.html
templates/registration/: login.html
test/: urls.py
users/: urls.py  views.py
(+123 files in other folders)
